--- a/README
+++ b/README
@@ -1,28 +1,34 @@
 BrainBuster - A Logic Captcha For Rails
 =======================================
 Homepage: http://opensource.thinkrelevance.com/wiki/BrainBuster
-SVN Repository: http://robsanheim.googlecode.com/svn/trunk/brain_buster
 Mailing List: http://groups.google.com/group/brainbuster-discuss
+Git Repository (dev happens here): git://github.com/rsanheim/brain_buster.git
+SVN Repository (read only mirror): http://opensource.thinkrelevance.com/svn/brain_buster/trunk/
 
-The latest version removes all depreacted code from 0.7 and below, and does serious clean up all over the place.
+Notes (for 0.8.0 release)
+=========================
+The latest version removes all deprecated code from 0.7 and below, and does serious clean up all over the place.
 
-Note that you also have to handle captcha failure on your own, since Rails 2.0 requires a render or redirect to halt a filter chain.  This makes sense anyways, as to really have a nice user experience you should be placing the user's half saved model in the flash (or something) and then pulling it back into the form if the captcha fails.
+You now have to handle captcha failure on your own, since Rails 2.0 requires a render or redirect to halt a filter chain.  This makes sense anyways, because if you really want a decent user experience you should be placing the user's half saved model in the flash (or an ivar, or a cookie, or whatever) and then pulling it back into the form if the captcha fails.
 
-This salt should be consistent across your entire application, else you will run into problems between different Rails instances.  A simple random string can be generated with the following code from irb:
-  [Array.new(32){rand(256).chr}.join].pack("m").chomp
+See the CHANGELOG for more details.
 
 * How to install fresh in a Rails app?
 
 script/plugin install http://robsanheim.googlecode.com/svn/trunk/brain_buster
 script/generate brain_buster_migration 
 rake db:migrate
-optionally set the salt in your ApplicationController
+optionally set the cookie salt in your ApplicationController (or just use the default)
 add the appropriate filters where you want to use the captcha
-add the _captcha.rhtml partial to any views where you want to challenge the userand you are all set!
+render the _captcha.rhtml partial to any views where you want to challenge the user and you are all set!
 
 * Want to check out the source?
 
-svn checkout http://robsanheim.googlecode.com/svn/trunk/brain_buster/ brainbuster
+git clone git://github.com/rsanheim/brain_buster.git
+
+or 
+
+svn checkout http://opensource.thinkrelevance.com/svn/brain_buster/trunk/ brainbuster
 
 * Need more help?
 
@@ -36,16 +42,14 @@ Some example question and answers are:
 
 "What is fifteen minus five?" => "10"
 "Which one of these doesn't fit? 'blue, red, yellow, flower'" => 'flower'
-"Spell the word 'dog' backwards." => "god"
 
 For more on logic captchas and alternate approaches, please see http://www.w3.org/TR/turingtest/#logic
 
 Details
 =======================================
-BrainBuster includes a model for storing questions and answers, a small module with filters that is mixed into ActionController::Bases, a small partial to display the question and input form, and a basic stylesheet for styling the partial.  There is also a "captcha_footer" partial that is not functionally required at all, its just included to make it easy to give credit and a little link-love if you find this useful.  The style sheet is also not required of course, it just has a little bit of clean css for the captcha form.
+BrainBuster includes a model for storing questions and answers, a small module that is mixed into ActionController::Bases, a small partial to display the question and input form, and a basic stylesheet for styling the partial.  There is also a "captcha_footer" partial that is not functionally required at all, its just included to make it easy to give credit and a little link-love if you find this useful.  The style sheet is also not required of course, it just has a little bit of clean css for the captcha form.
 
-This captcha is meant to be user-friendly, so for a questions like "What is two plus two", all of the following answers will work: "4", "four", "Four", "   four   ".  By default, a user only needs to answer a captcha _once_, then they are cookied and don't have to answer another question
-until they close/reopen their browser.
+This captcha is meant to be user-friendly, so for a questions like "What is two plus two", all of the following answers will work: "4", "four", "Four", "   four   ".  By default, a user only needs to answer a captcha _once_, then they are cookied and don't have to answer another question until they close/reopen their browser.
 
 Installation
 =======================================
@@ -53,33 +57,44 @@ Installation
 
     script/generate brain_buster_migration
 
-* Copy the style sheet and partials into their appropriate places - this will depend upon your application, though I suggest 
-  placing the partial into /app/views/shared if you want to use it for multiple controllers.
-
-    cp vendor/plugins/brain_buster/assets/stylesheets/captcha.css public/stylesheets/             
-    cp vendor/plugins/brain_buster/views/brain_busters/_*.rhtml app/views/shared/
-
-    # add the style sheet if you like
-    <%= stylesheet_link_tag 'captcha' %>
-
 * Now add the filters for any action(s) you want protected.  Lets say in a PagesController you have a show action that presents a page to a user with some nice ajax capable fields that can directly post to an update action to change the page.  So we need to create a captcha before we show the page so we can present the captcha question to the user, and we need to validate that captcha before we update.  
 
     class PagesController
       before_filter :create_brain_buster, :only => [:show]
       before_filter :validate_brain_buster, :only => [:update]
       
-      def show... # your normal code is here
-      def update...
+      def show # your normal code is here
+      def update # updating your models, etc
+
+* override render_or_redirect_for_captcha_failure in your controller, to handle the captcha failure state.  Note that if you *don't override* this method, BrainBuster will just do render :text with the brain buster error message -- this is probably not what you want.
+
+    class PagesController
+    
+      def render_or_redirect_for_captcha_failure
+        render :action => "show"
+      end
        
 * render the partial in appropriate templates - if we are creating the captcha for the show action, we probably need the 
   form rendered in show.rhtml.
 
     - show.rhtml:
       ... inside your update form somewhere
-      <%= render :partial => 'shared/captcha' %> 
-      <%= render :partial => "shared/captcha_footer" %>  --> only if you want to give credit back...
+      <%= render :partial => '/captcha' %> 
+      <%= render :partial => "/captcha_footer" %>  --> optional, only if you want to give credit back...
 
-* Thats it.  Now if the captcha fails on update, the filter chain will halt and flash[:error] will have a message (by default).  You can override that by defining your own captcha_failure method in your controllers.
+* Copy the style sheet into your app's public directory (optional)
+
+    cp vendor/plugins/brain_buster/assets/stylesheets/captcha.css public/stylesheets/             
+
+    # add the style sheet to any views that use the captcha
+    <%= stylesheet_link_tag 'captcha' %>
+
+* Thats it.  Now if the captcha fails on update, the filter chain will place the failure message into flash[:error] and call render_or_redirect_for_captcha_failure.  
+
+Troubleshooting and Gotchas
+===========================
+* If you don't override render_or_redirect_for_captcha_failure, you will see a plain error message for a failed captcha.
+* If you delete a question, the random id finder may try to find that deleted question and blow up.  For now, just insert another question with that same id to fix the issue.
 
 Real world usage
 ================
@@ -87,6 +102,7 @@ You can see the plugin in action at http://madisonrails.com or at http://wiki.ru
 
 Credits
 =======================================
-BrainBuster is by Rob Sanheim (http://robsanheim.com).  Email: rsanheim at gmail DOT com
+BrainBuster is by Rob Sanheim (http://robsanheim.com) and Relevance (http://thinkrelevance.com).  
+Email: rsanheim at gmail no spam dot com
 
 Thanks to the creators of the Exception Logger plugin (http://svn.techno-weenie.net/projects/plugins/exception_logger/) and the Unobtrusive Javascript plugin (http://www.ujs4rails.com/), as I referred to their source code for help.
