--- a/README
+++ b/README
@@ -3,7 +3,6 @@ BrainBuster - A Logic Captcha For Rails
 Homepage: http://opensource.thinkrelevance.com/wiki/BrainBuster
 Mailing List: http://groups.google.com/group/brainbuster-discuss
 Git Repository (dev happens here): git://github.com/rsanheim/brain_buster.git
-SVN Repository (read only mirror): http://opensource.thinkrelevance.com/svn/plugins/brain_buster/trunk/
 
 Notes
 =========================
@@ -18,7 +17,7 @@ Quick Install
 
 * How to install fresh in a Rails app?
 
-  script/plugin install http://opensource.thinkrelevance.com/svn/plugins/brain_buster/trunk/
+  script/plugin install http://github.com/rsanheim/brain_buster.git
   script/generate brain_buster_migration 
   rake db:migrate
   optionally set the cookie salt in your ApplicationController (or don't touch it to use the default)
@@ -29,9 +28,6 @@ Quick Install
 
 git clone git://github.com/rsanheim/brain_buster.git
 
-or 
-
-svn checkout http://opensource.thinkrelevance.com/svn/plugins/brain_buster/trunk/ brainbuster
 
 * Need more help?
 
