--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,9 @@ TODOs (someday/maybe)
   # protect :update, :from => [:show, :index]
   # brain_buster_form_on :show, :protect => :update
 
+HEAD
+* convert to new style describe/it in specs
+
 0.8.1 2008/02/22
 * use append_view_paths instead of directly appending to it, for edge rails compatibility [Hashrocket]
 * remove #send for 1.9 compatibility
